@@ -2346,3 +2346,7 @@ Start... early ages
   vdi/vdi_mouse.c: Added BIOS and VDI support for extended mouse buttons
   3, 4 and 5. (VRI)
 - desk/deskmain.c: Added scrolling on desktop windows using arrow keys. (VRI)
+
+2011-01-02
+- desk/deskpro.c: Removed useless space in front of the command line of
+  textmode programs.
